# MscAndBLE

./: CMakeLists.txt  README.md  nrf52840dk_nrf52840.overlay  pm_static.yml  prj.conf  sysbuild.conf
inc/: bat_ssadc.h  ble_nus_order.h  button.h  lcd.h  main.h  sensor.h  server_4G.h  user_gpio.h  user_rtc.h  user_storage.h  user_workQueue.h
src/: bat_ssadc.c  ble_nus_order.c  button.c  lcd.c  main.c  sensor.c  server_4G.c  user_gpio.c  user_rtc.c  user_storage.c  user_workQueue.c
sysbuild/: mcuboot.conf  mcuboot.overlay
